Fix: Navbar z-index 수정
Former-commit-id: 02e416776e56943cd16265807ed492a1e327c1a6

--- a/frontend/overmountain/src/scss/layout/_headers.scss
+++ b/frontend/overmountain/src/scss/layout/_headers.scss
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: center;
     position: relative;
-    z-index: 1;
+    z-index: 9999;
     padding: 10px;
   }
   .navbar-wrapper {
